tests/paczka1/fuzzy1/60096188.err
Error in line 6: S327 S327 13,6
Error in line 5: TS7v09qT S157 26,0
Error in line 4: Q51 S327 75,9
Error in line 20: nRI90I1w S327 96,3
Error in line 27: euR5 A654 -3,6
Error in line 26: euR5 A654 40,3
Error in line 31: yraKDVgA1Xt S327 98,2
